--- a/src/shared/location/location.scss
+++ b/src/shared/location/location.scss
@@ -1,4 +1,4 @@
-page-location {
+shared-location {
   .scroll {
     height: 100%
   }
@@ -6,5 +6,9 @@ page-location {
   #map {
     width: 100%;
     height: 100%;
+  }
+
+  .item-ios.item-block .item-inner {
+    border-bottom: 0;
   }
 }
