--- a/src/pages/company/list/company-list.scss
+++ b/src/pages/company/list/company-list.scss
@@ -5,10 +5,23 @@ page-company-list {
     top: 50%;
     margin: -14px 0 0 -14px;
   }
-  ion-avatar {
+  ion-avatar#ion-avatar-start {
+    display:flex;
+    align-items: center;
+    margin: 0 auto;
     ion-icon {
       font-size: 30px;
       color: color($colors, primary)
+    }
+  }
+  ion-avatar#ion-avatar-end {
+    display:flex;
+    align-items: center;
+    margin-left: auto;
+    justify-content: flex-end;
+    ion-icon {
+      font-size: 20px;
+      color: #888;
     }
   }
 }
