😇 Aligning middle shouldn't overwrite vertical margin

--- a/src/pages/company/list/company-list.scss
+++ b/src/pages/company/list/company-list.scss
@@ -8,7 +8,7 @@ page-company-list {
   ion-avatar#ion-avatar-start {
     display:flex;
     align-items: center;
-    margin: 0 auto;
+    margin: inherit auto;
     ion-icon {
       font-size: 30px;
       color: color($colors, primary)
